[package]
description = "LSP server to communicate with LLMs"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "llm-lsp"
version = "0.0.1"

[dependencies]
async-lsp = { version = "0.2.0", features = ["tokio"] }
clap = { version = "4.5.20", features = ["derive"] }
clap-markdown = "0.1.4"
dirs = "5.0.1"
dotenvy_macro = "0.15.7"
figment = { version = "0.10.19", features = ["toml"] }
futures = "0.3.31"
lsp-types = "0.95.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["io-std", "macros", "parking_lot", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.12", features = ["compat"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
